--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,37 @@ spring:
     description: @project.description@
     version: @project.version@
 
-  jackson:
-    property-naming-strategy: SNAKE_CASE
+  #  jackson:
+  #    property-naming-strategy: SNAKE_CASE
   lifecycle:
     timeout-per-shutdown-phase: 30s
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    show-sql: false
+  datasource:
+    url: jdbc:h2:mem:test;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
 
 server:
   shutdown: graceful
+  error:
+    include-message: always
+    #    include-stacktrace: false
+    include-exception: false
+    include-binding-errors: always
 
 
 logging:
   level:
-    .: ERROR
+    de.dkb.account: DEBUG
+
+
